<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="user_email">Please insert your e-mail</string>
    <string name="user_name">Please insert your name</string>
    <string name="user_password">Please insert your password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">Register</string>
    <string name="tv_doesnt_have_account">Don\'t have an account? Please register!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send_new_message">Send new message</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_register_group">RegisterGroupActivity</string>
</resources>
