<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@android:color/white"
        app:boxBackgroundColor="@color/colorPrimary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@android:color/white"
        app:boxBackgroundColor="@color/colorPrimary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_login_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="validateUserLogin"
        android:text="@string/btn_login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:strokeColor="@android:color/white"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="openRegisterActivity"
        android:text="@string/tv_doesnt_have_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>
